added 2 logos and images of bloom

--- a/frontend/libre template/index.html
+++ b/frontend/libre template/index.html
@@ -8,9 +8,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Personal Library - Codrops Template</title>
-		<meta name="description" content="A responsive web app template with common components like profile, list, tabs, menu views. Made for Codrops exclusively.">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>cNote</title>
 		<link rel="stylesheet" href="output.css">
 		<link rel="stylesheet" href="node_modules/tippy.js/dist/themes/light.css">
 	</head>
@@ -141,21 +139,7 @@
 						</table>
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
-						<div class="flex">
-							<div class="w-1/2">
-								<p class="text-indigo text-sm p-2">Most read format</p>
-								<p class="font-medium text-sm pl-2">Print</p>
-							</div>
-							<div class="w-1/2">
-								<p class="text-indigo text-sm p-2">Total read/own</p>
-								<p class="font-medium text-sm pl-2">4/7</p>
-							</div>
-						</div>
-						<div class="pt-6">
-							<p class="text-indigo text-sm p-2">Most re-read book</p>
-							<p class="font-medium text-sm pl-2 leading-normal">Just My Type: A Book About Fonts
-								<br><span class="font-normal">by Simon Garfield</span></p>
-						</div>
+						<img src="./images/bloomKYC.png" alt="">
 					</div>
 				</div>
 				<!-- Filter -->
@@ -170,7 +154,7 @@
 				<!-- Library -->
 				<div class="hidden px-2 pt-2 md:px-0 flex-wrap order-2 pb-8 js-tab-pane active" id="section-library">
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4 js-book">
-						<img src="./images/book-01.jpg" alt="book-01" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo">
+						<img src="./images/zkLogo.jpg" alt="book-01" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
 							<p class="text-sm my-2 font-medium sm:font-normal">apartmento Aug 2018</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
@@ -190,7 +174,7 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-02.jpg" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/BCCLogo.jpeg" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
 							<p class="text-sm my-2 font-medium sm:font-normal">Popeye Aug 2018</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
