--- a/frontend/libre template/index.html
+++ b/frontend/libre template/index.html
@@ -109,38 +109,13 @@
 				</div>
 				<!-- Desktop Stats -->
 				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
-					<div class="p-4 px-6 w-full md:w-1/2 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
-						<h4>Your favourite authors in this category</h4>
-						<table class="mt-4 w-full">
-							<thead class="p-2 text-sm leading-loose border-b text-indigo">
-								<tr>
-									<td>Name</td>
-									<td class="text-center">Owned/Wishlist</td>
-									<td class="text-right">Nationality</td>
-								</tr>
-							</thead>
-							<tbody class="p-2 leading-loose text-sm">
-								<tr class="border-b">
-									<td class="py-2">Yohji Yamamoto</td>
-									<td class="py-2 text-center">5/4</td>
-									<td class="py-2 text-right">Japan</td>
-								</tr>
-								<tr class="border-b">
-									<td class="py-2">Sato Oki</td>
-									<td class="py-2 text-center">1/3</td>
-									<td class="py-2 text-right">Japan</td>
-								</tr>
-								<tr>
-									<td class="py-2">Amaya Arzuaga</td>
-									<td class="py-2 text-center">1/1</td>
-									<td class="py-2 text-right">Spain</td>
-								</tr>
-							</tbody>
-						</table>
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+						<img src="./images/bloomID.png" alt="">
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
-						<img src="./images/bloomKYC.png" alt="">
+						<img src="./images/kycbutt.png" alt="">
 					</div>
+
 				</div>
 				<!-- Filter -->
 				<div class="px-6 md:px-0 flex items-baseline justify-between border-b-2 border-grey-light mt-6 order-0 lg:order-1">
