--- a/frontend/libre template/index.html
+++ b/frontend/libre template/index.html
@@ -51,7 +51,6 @@
 				</svg>
 				</div>
 			</span>
-				<a href="https://tympanus.net/codrops/?p=35739" class="text-sm text-right text-white py-2 px-3 hover:text-grey-dark no-underline hidden lg:block lg:w-1/3 px-6">Back to Codrops</a>
 			</div>
 		</div>
 		<!-- Main -->
@@ -65,9 +64,9 @@
 					</li>
 					<li class="ml-2 mb-4">
 						<div class="flex" id="sidenav-categories-trigger">
-							<img src="./images/category-default.svg" alt="home-icon" class="w-4 h-4 mr-2">
+							<img src="./images/home-default.svg" alt="home-icon" class="w-4 h-4 mr-2">
 							<div class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium w-full relative">
-								Categories
+								Profiles
 								<div class="pointer-events-none absolute pin-y pin-r flex items-center px-1 text-grey-darker" id="sidenav-icon">
 									<svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
 										<path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
@@ -76,20 +75,17 @@
 							</div>
 						</div>
 						<ul class="text-grey lg:text-grey-dark list-reset leading-loose mt-2" id="sidenav-categories">
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Fiction</li>
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Nonfiction</li>
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Lifestyle</li>
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Health &amp; Fitness</li>
+							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Investor</li>
+							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Personal</li>
 							<li class="text-indigo-lighter lg:text-indigo-darker font-medium flex justify-between items-center hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4 mobile-home-trigger">
-								<span>Art & Design</span>
+								<span>Your Company</span>
 								<span class="bg-indigo-dark text-white text-xs rounded-full px-2 leading-normal">7</span>
 							</li>
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Music</li>
 						</ul>
 					</li>
 					<li class="ml-2 mb-4 flex">
 						<img src="./images/wishlist-default.svg" alt="wishlist-icon" class="w-4 h-4 mr-2">
-						<div class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Wishlist</div>
+						<div class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Settings</div>
 					</li>
 					<li class="ml-2 mb-4 flex lg:hidden">
 						<img src="./images/profile-default.svg" alt="profile-icon" class="w-4 h-4 mr-2">
@@ -102,10 +98,10 @@
 				<!-- Title -->
 				<div class="px-6 md:px-0 flex justify-between items-center -order-1">
 					<div>
-						<h2 class="font-normal">Art &amp; Design</h2>
-						<p class="text-grey-dark mt-2">Interesting Stats</p>
+						<h2 class="font-normal">Armada Chain</h2>
+						<p class="text-grey-dark mt-2">Your Company</p>
 					</div>
-					<button class="bg-indigo-dark hover:bg-indigo-darker text-white text-sm py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Add New Book</button>
+					<button class="bg-indigo-dark hover:bg-indigo-darker text-white text-sm py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Add a new Founder / Bloom ID</button>
 				</div>
 				<!-- Desktop Stats -->
 				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
@@ -116,13 +112,22 @@
 						<img src="./images/kycbutt.png" alt="">
 					</div>
 
+					<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
+						<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+							<img src="./images/bloomID.png" alt="">
+						</div>
+						<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+							<img src="./images/kycbutt.png" alt="">
+						</div>
+
 				</div>
 				<!-- Filter -->
 				<div class="px-6 md:px-0 flex items-baseline justify-between border-b-2 border-grey-light mt-6 order-0 lg:order-1">
-					<h4 class="hidden md:inline-block text-grey-dark font-normal">Books</h4>
+					<h4 class="hidden md:inline-block text-grey-dark font-normal">Possible Convertible Notes</h4>
 					<div>
 						<div class="inline-block md:hidden no-underline border-indigo pb-2 px-2 text-sm mr-2 text-indigo-darkest hover:cursor-pointer js-tab relative" data-tab="section-stats">Stats</div>
 						<div class="no-underline inline-block border-indigo pb-2 px-2 text-sm mr-2 text-indigo-darkest hover:cursor-pointer js-tab active relative" data-tab="section-library">Library <span class="text-indigo text-xs">(7)</span></div>
+						<div class="no-underline inline-block border-indigo pb-2 px-2 text-sm mr-2 text-indigo-darkest hover:cursor-pointer js-tab active relative" data-tab="section-library">Library1 <span class="text-indigo text-xs">(7)</span></div>
 						<div class="no-underline inline-block border-indigo pb-2 px-2 text-sm text-indigo-darkest hover:cursor-pointer js-tab relative" data-tab="section-picks">Picks for you</div>
 					</div>
 				</div>
@@ -131,7 +136,7 @@
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4 js-book">
 						<img src="./images/zkLogo.jpg" alt="book-01" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">apartmento Aug 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">zk Capital</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full libre-bg-grey text-white px-2 py-1/2 text-xs">Loaned</label>
 							<div class="block sm:hidden relative">
@@ -151,7 +156,7 @@
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
 						<img src="./images/BCCLogo.jpeg" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Popeye Aug 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">Blockchain Capital</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full libre-bg-yellow text-white px-2 py-1/2 text-xs">Started</label>
 							<div class="block sm:hidden relative">
@@ -170,9 +175,9 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-03.jpg" alt="book-03" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/ikx.png" alt="book-03" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Brutus Aug 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">1kx</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full libre-bg-pink text-white px-2 py-1/2 text-xs">Reading</label>
 							<div class="block sm:hidden relative">
@@ -190,9 +195,9 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-04.jpg" alt="book-04" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/YC.jpg" alt="book-04" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Harnako Aug 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">YC</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full bg-indigo text-white px-2 py-1/2 text-xs">Finished</label>
 							<div class="block sm:hidden relative">
@@ -210,9 +215,9 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-05.jpg" alt="book-05" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/svangel.png" alt="book-05" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Premium 2 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">SV Angels</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full bg-indigo text-white px-2 py-1/2 text-xs">Finished</label>
 							<div class="block sm:hidden relative">
@@ -230,9 +235,9 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-06.jpg" alt="book-06" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/500.jpg" alt="book-06" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Premium 4 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">500 Startups</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full bg-indigo text-white px-2 py-1/2 text-xs">Finished</label>
 							<div class="block sm:hidden relative">
@@ -250,9 +255,9 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-07.jpg" alt="book-07" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/techstars.jpg" alt="book-07" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Brutus Aug 2018</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">Techstars</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full libre-bg-pink text-white px-2 py-1/2 text-xs">Reading</label>
 							<div class="block sm:hidden relative">
@@ -325,7 +330,7 @@
 						</g>
 					</svg>
 					<div class="ml-3">
-						<p>Amie Chen</p>
+						<p>Jackie Zhang</p>
 						<p class="text-grey-dark mt-1 text-sm">Joined since 2017</p>
 					</div>
 				</div>
