--- a/frontend/libre template/index.html
+++ b/frontend/libre template/index.html
@@ -148,7 +148,7 @@
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
 						<img src="./images/BCCLogo.jpeg" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Blockchain Capital</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">OK Blockchain Capital</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent.</p>
 							<label for="" class="hidden sm:inline-block rounded-full libre-bg-yellow text-white px-2 py-1/2 text-xs">Started</label>
 							<div class="block sm:hidden relative">
