new images, deleted files, frontend updates

--- a/frontend/libre/index.html
+++ b/frontend/libre/index.html
@@ -327,12 +327,9 @@
 					</div>
 				</div>
 				<div class="my-4 border-t pt-4">
-					<h3 class="text-indigo-dark font-normal">You have read <strong>4 of 30 books</strong> in 2018</h3>
+					<h3 class="text-indigo-dark font-normal">Your company score is <strong>640</strong> in 2018</h3>
 					<div class="flex flex-wrap -ml-2 justify-start items-center">
-						<img src="./images/read-01.jpg" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block m-2 transition-normal hover:brighter">
-						<img src="./images/read-02.jpg" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block m-2 transition-normal hover:brighter">
-						<img src="./images/read-03.jpg" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block m-2 transition-normal hover:brighter">
-						<img src="./images/read-04.jpg" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block m-2 transition-normal hover:brighter">
+						<img src="./images/Armada.png" alt="read" class="shadow-md block m-2 transition-normal hover:brighter">
 					</div>
 				</div>
 				<div class="mt-6">
