--- a/frontend/libre/investor.html
+++ b/frontend/libre/investor.html
@@ -86,7 +86,7 @@
 					</li>
 					<li class="ml-2 mb-4 flex">
 						<img src="./images/wishlist-default.svg" alt="wishlist-icon" class="w-4 h-4 mr-2">
-						<div class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Wishlist</div>
+						<div class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Settings</div>
 					</li>
 					<li class="ml-2 mb-4 flex lg:hidden">
 						<img src="./images/profile-default.svg" alt="profile-icon" class="w-4 h-4 mr-2">
@@ -135,6 +135,7 @@
 						</table>
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+						<img src="./images/kycbutt.png" alt="">
 						<div class="flex">
 							<div class="w-1/2">
 							</div>
@@ -157,7 +158,7 @@
 				<!-- Library -->
 				<div class="hidden px-2 pt-2 md:px-0 flex-wrap order-2 pb-8 js-tab-pane active" id="section-library">
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4 js-book">
-						<img src="./images/book-01.jpg" alt="book-01" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo">
+						<img src="./images/88.png" alt="book-01" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
 							<p class="text-sm my-2 font-medium sm:font-normal">88 Coin</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Token music company sponsoring artists from Asia</p>
@@ -176,7 +177,7 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-02.jpg" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/armada.png" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
 							<p class="text-sm my-2 font-medium sm:font-normal">Armada Chain</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Modular Collaborative Supply Chain platform</p>
@@ -197,7 +198,7 @@
 						</div>
 					</div>
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
-						<img src="./images/book-07.jpg" alt="book-07" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
+						<img src="./images/armada.png" alt="book-07" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
 							<p class="text-sm my-2 font-medium sm:font-normal">Blockchan</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Anime content on the blockchain</p>
@@ -221,33 +222,33 @@
 					<div class="flex justify-start items-center p-5 px-6 w-full sm:w-1/2" style="background-color:#FBC164;">
 						<img src="./images/pick-1.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
-							<p class="font-medium">Popeye Jul 2018</p>
-							<p class="mt-3 text-sm">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent</p>
-							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Add to Wishlist</button>
+							<p class="font-medium">Cat Coin</p>
+							<p class="mt-3 text-sm">Cat backed asset token for exchanging and tracking cats.</p>
+							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">View Proposal</button>
 						</div>
 					</div>
 					<div class="flex justify-start items-center p-5 px-6  w-full sm:w-1/2" style="background-color:#F1CECD;">
 						<img src="./images/pick-2.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
-							<p class="font-medium">Brutus Aug 2018</p>
-							<p class="mt-3 text-sm">Sapien eget, fermentum curabitur quis ut pharetra odio id, vitae eros eget maecenas, ullamcorper vitae.</p>
-							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Add to Wishlist</button>
+							<p class="font-medium">ETH Finder</p>
+							<p class="mt-3 text-sm">Crowd sourced item finder platform.</p>
+							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">View Proposal</button>
 						</div>
 					</div>
 					<div class="flex justify-start items-center p-5 px-6  w-full sm:w-1/2" style="background-color:#ECE7E9;">
 						<img src="./images/pick-3.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
-							<p class="font-medium">Casa Aug 2018</p>
-							<p class="mt-3 text-sm">Curabitur quis ut pharetra odio id, vitae eros eget tristique maecenas, ullamcorper vitae.</p>
-							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Add to Wishlist</button>
+							<p class="font-medium">EOS GO</p>
+							<p class="mt-3 text-sm">AR game built on EOS platform.</p>
+							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">View Proposal</button>
 						</div>
 					</div>
 					<div class="flex justify-start items-center p-5 px-6  w-full sm:w-1/2" style="background-color:#D0E3E8;">
 						<img src="./images/pick-4.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
-							<p class="font-medium">SUPER: Jul 2018</p>
-							<p class="mt-3 text-sm">Eu quo donec pellentesque, urna velit. Ultrices ante iaculis ligula praesent</p>
-							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Add to Wishlist</button>
+							<p class="font-medium">Meow Meow</p>
+							<p class="mt-3 text-sm">Supply chain tracking ecosystem for rave drugs.</p>
+							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">View Proposal</button>
 						</div>
 					</div>
 				</div>
@@ -293,13 +294,13 @@
 			</div>
 		</div>
 		<div class="hidden p-4" id="popup">
-			<h3 class="font-medium">Blockchain</h3>
-			<p class="text-sm mt-2 mb-3">Curabitur quis ut pharetra odio id, vitae eros eget tristique maecenas, ullamcorper vitae.</p>
+			<h3 class="font-medium">Armada Chain</h3>
+			<p class="text-sm mt-2 mb-3">Modular Collaborative Supply Chain Platform</p>
 			<div class="relative">
 				<select class="block appearance-none w-full text-sm bg-white border border-grey-light hover:border-grey pl-3 py-1 pr-8 rounded shadow leading-normal focus:outline-none focus:shadow-outline" id="tippy-select">
-					<option>Start</option>
-					<option>Loaned</option>
-					<option selected>Finished</option>
+					<option>Nothing</option>
+					<option>Loan</option>
+					<option selected>Equity</option>
 				</select>
 				<div class="pointer-events-none absolute pin-y pin-r flex items-center px-2 text-grey-darker">
 					<svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
