--- a/frontend/libre/index.html
+++ b/frontend/libre/index.html
@@ -106,7 +106,7 @@
 				<!-- Desktop Stats -->
 				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
-						<img src="./images/bloomID2.png" alt="">
+						<img src="./images/bloomID2.png" id = "bloomid" alt="">
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<button> <img src="./images/kycbutt.png" alt=""></button>
