add jquery to frontend

--- a/frontend/libre/index.html
+++ b/frontend/libre/index.html
@@ -361,5 +361,6 @@
 			</div>
 		</div>
 		<script src="bundle.js" async defer></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</body>
 </html>
