--- a/frontend/libre/index.html
+++ b/frontend/libre/index.html
@@ -109,7 +109,7 @@
 						<img src="./images/bloomID2.png" id = "bloomid" alt="">
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
-						<button> <img src="./images/kycbutt.png" alt=""></button>
+						<button onclick="bloomcheck()"> <img src="./images/kycbutt.png" alt=""></button>
 					</div>
 
 				</div>
@@ -362,5 +362,6 @@
 		</div>
 		<script src="bundle.js" async defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="backend/src/temp_back.js"></script>
 	</body>
 </html>
