frontend for the venture side of the code

--- a/frontend/main/startup_proposal.html
+++ b/frontend/main/startup_proposal.html
@@ -103,9 +103,12 @@
 				</div>
 				<!-- Desktop Stats -->
 				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-black shadow-md md:shadow-none">
+						<img src="./images/BCCLogo.png">
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+						<img src="./images/notesSample.png">
+
 					</div>
 
 				</div>
@@ -144,11 +147,11 @@
 		<script src="bundle.js" async defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="./temp_back.js"></script>
-		<script> 
+		<script>
 			// function  bloomCheck(){
 			// 	$("#bloomid").attr("src","./images/bloomID.png"); //jquery call
 			// }
-		
+
 		</script>
 
 	</body>
