--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -364,10 +364,20 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="./temp_back.js"></script>
 		<script> 
-			// function  bloomCheck(){
-			// 	$("#bloomid").attr("src","./images/bloomID.png"); //jquery call
-			// }
-		
+			window.addEventListener('load', function() {
+
+			  // Check if Web3 has been injected by the browser:
+			  if (typeof web3 !== 'undefined') {
+			    // You have a web3 browser! Continue below!
+			    alert("yes");
+			    startApp(web3);
+			  } else {
+			     // Warn the user that they need to get a web3 browser
+			     // Or install MetaMask, maybe with a nice graphic.
+			     alert("no metamask installed");
+			  }
+
+			})
 		</script>
 
 	</body>
