--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -369,7 +369,7 @@
 			  // Check if Web3 has been injected by the browser:
 			  if (typeof web3 !== 'undefined') {
 			    // You have a web3 browser! Continue below!
-			    alert("yes");
+			    alert("Web3 Injected");
 			    startApp(web3);
 			  } else {
 			     // Warn the user that they need to get a web3 browser
