--- a/frontend/main/startup_proposal.html
+++ b/frontend/main/startup_proposal.html
@@ -114,8 +114,15 @@
 				</div>
 				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats2">
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+						<img src="./images/armada.png">
 					</div>
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+						<form>
+						  Smart Contract #: <br>
+						  <input type="text" name="Smart Contract #"><br>
+						  Revenue: <br>
+						  <input type="text" name="Revenue">
+						</form>
 					</div>
 
 				</div>
