--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -76,7 +76,7 @@
 						</div>
 						<ul class="text-grey lg:text-grey-dark list-reset leading-loose mt-2" id="sidenav-categories">
 							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Investor</li>
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Personal</li>
+							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4"><a href="startup_proposal.html">Proposal<a/></li>
 							<li class="text-indigo-lighter lg:text-indigo-darker font-medium flex justify-between items-center hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4 mobile-home-trigger">
 								<span>Your Company</span>
 								<span class="bg-indigo-dark text-white text-xs rounded-full px-2 leading-normal">7</span>
@@ -345,13 +345,12 @@
 			</div>
 		</div>
 		<div class="hidden p-4" id="popup">
-			<h3 class="font-medium">Popeye Aug 2018</h3>
-			<p class="text-sm mt-2 mb-3">Curabitur quis ut pharetra odio id, vitae eros eget tristique maecenas, ullamcorper vitae.</p>
+			<h3 class="font-medium">Loan Proposal</h3>
+			<p class="text-sm mt-2 mb-3">Start Proposal with investor</p>
 			<div class="relative">
 				<select class="block appearance-none w-full text-sm bg-white border border-grey-light hover:border-grey pl-3 py-1 pr-8 rounded shadow leading-normal focus:outline-none focus:shadow-outline" id="tippy-select">
-					<option>Start</option>
-					<option>Loaned</option>
-					<option selected>Finished</option>
+					<option>Details</option>
+					<option selected>Start</option>
 				</select>
 				<div class="pointer-events-none absolute pin-y pin-r flex items-center px-2 text-grey-darker">
 					<svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
