--- a/frontend/main/startup_proposal.html
+++ b/frontend/main/startup_proposal.html
@@ -120,9 +120,12 @@
 						<form>
 						  Smart Contract #: <br>
 						  <input type="text" name="Smart Contract #"><br>
+						  User #: <br>
+						  <input type="text" name="Revenue"><br>
 						  Revenue: <br>
 						  <input type="text" name="Revenue">
 						</form>
+					<a href="investor.html">Confirm Proposal</a>
 					</div>
 
 				</div>
