--- a/frontend/main/investor.html
+++ b/frontend/main/investor.html
@@ -122,7 +122,7 @@
 									<td class="py-2 text-right">SAFT</td>
 								</tr>
 								<tr class="border-b">
-									<td class="py-2">Armada Chain</td>
+									<td class="py-2">Meme Chain</td>
 									<td class="py-2 text-center">2/3</td>
 									<td class="py-2 text-right">SAFT</td>
 								</tr>
@@ -179,7 +179,7 @@
 					<div class="flex flex-row sm:flex-col items-center sm:items-start w-full xs:w-1/2 sm:w-1/3 md:w-1/5 p-4">
 						<img src="./images/armada.png" alt="book-02" class="w-1/3 sm:w-full shadow-md transition-normal hover:brighter hover:translate-y-1 hover:shadow-lg hover:border-indigo js-book">
 						<div class="ml-3 sm:ml-0 w-2/3 sm:w-full">
-							<p class="text-sm my-2 font-medium sm:font-normal">Armada Chain</p>
+							<p class="text-sm my-2 font-medium sm:font-normal">Meme Chain</p>
 							<p class="block sm:hidden mt-2 mb-3 text-sm leading-medium">Modular Collaborative Supply Chain platform</p>
 							<label for="" class="hidden sm:inline-block rounded-full libre-bg-yellow text-white px-2 py-1/2 text-xs">Equity Option</label>
 							<div class="block sm:hidden relative">
@@ -277,25 +277,25 @@
 					</div>
 				</div>
 				<div class="my-4 border-t pt-4">
-					<h3 class="text-indigo-dark font-normal">Loaned<strong>10k of 90k available</strong> in 2018</h3>
+					<h3 class="text-indigo-dark font-normal">Loaned<strong>10k of 900k available</strong> in 2018</h3>
 					<div class="flex flex-wrap -ml-2 justify-start items-center">
 					</div>
 				</div>
 				<div class="mt-6">
 					<p class="text-grey-dark mt-1 text-sm">Proposals</p>
 					<div class="flex items-start mt-2">
-						<img src="./images/read-04.jpg" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block transition-normal hover:brighter">
+						<img src="./images/armada.png" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block transition-normal hover:brighter">
 						<div class="ml-3">
-							<p class="mt-1 leading-normal">Zera Health</p>
-							<p class="text-indigo text-sm mt-1">50k/7% CNote</p>
+							<a class="mt-1 leading-normal" href="investor_proposal.html">Armada Chain</a>
+							<p class="text-indigo text-sm mt-1">100k/8% CNote</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="hidden p-4" id="popup">
-			<h3 class="font-medium">Armada Chain</h3>
-			<p class="text-sm mt-2 mb-3">Modular Collaborative Supply Chain Platform</p>
+			<h3 class="font-medium">Meme Chain</h3>
+			<p class="text-sm mt-2 mb-3">Meme Supply Chain Platform</p>
 			<div class="relative">
 				<select class="block appearance-none w-full text-sm bg-white border border-grey-light hover:border-grey pl-3 py-1 pr-8 rounded shadow leading-normal focus:outline-none focus:shadow-outline" id="tippy-select">
 					<option>Nothing</option>
