--- a/frontend/main/investor_proposal.html
+++ b/frontend/main/investor_proposal.html
@@ -98,14 +98,55 @@
 				<div class="px-6 md:px-0 flex justify-between items-center -order-1">
 					<div>
 						<h2 class="font-normal">Proposal</h2>
-						<p class="text-grey-dark mt-2">Armada Chain</p>
+						<p class="text-grey-dark mt-2">From Armada Chain</p>
 					</div>
 				</div>
 				<!-- Desktop Stats -->
-				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
+				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats2">
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+						<img src="./images/armada.png">
 					</div>
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+						<h2>Contract Details</h2>
+						<form>
+						  Smart Contract #: <br>
+						  <input type="text" name="Smart Contract #" value="1000"><br>
+						  User #: <br>
+						  <input type="text" name="Revenue" value = "1000"><br>
+						  Revenue: <br>
+						  <input type="text" name="Revenue" value ="10000">
+						</form>
+					</div>
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+						<h2>Company Details</h2>
+						<ul>
+							<li>Modular Global Supply Chain Platform
+							</li>
+							<li>Founded 2018
+							</li>
+							<li>Blockchain platform, native token
+							</li>
+							<li>PoC stage, single client in Latin America
+							</li>
+							<li>Team size: 6
+							</li>
+						</ul>
+					</div>
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+						<h2>Investment Details</h2>
+
+						<ul>
+							<li> 100k on 8% interest
+							</li>
+							<li> 4 years
+							</li>
+							<li> Convert to 9% equity on milestones
+							</li>
+
+						</ul>
+						<a href = "index.html">Accept</a>
+						<br>
+						<a href="investor.html">Decline</a>
 					</div>
 
 				</div>
@@ -129,14 +170,8 @@
 						</g>
 					</svg>
 					<div class="ml-3">
-						<p>Jackie Zhang</p>
-						<p class="text-grey-dark mt-1 text-sm">Joined since 2017</p>
-					</div>
-				</div>
-				<div class="my-4 border-t pt-4">
-					<h3 class="text-indigo-dark font-normal">Your company score is <strong>640</strong> in 2018</h3>
-					<div class="flex flex-wrap -ml-2 justify-start items-center">
-						<img src="./images/Armada.png" alt="read" class="shadow-md block m-2 transition-normal hover:brighter">
+						<p>Kent Makishima</p>
+						<p class="text-grey-dark mt-1 text-sm">Joined since 2018</p>
 					</div>
 				</div>
 			</div>
@@ -144,12 +179,6 @@
 		<script src="bundle.js" async defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="./temp_back.js"></script>
-		<script> 
-			// function  bloomCheck(){
-			// 	$("#bloomid").attr("src","./images/bloomID.png"); //jquery call
-			// }
-		
-		</script>
 
 	</body>
 </html>
