moved some stuff

--- a/frontend/main/startup_proposal.html
+++ b/frontend/main/startup_proposal.html
@@ -117,6 +117,7 @@
 						<img src="./images/armada.png">
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+						<h2>Investment Milestones</h2>
 						<form>
 						  Smart Contract #: <br>
 						  <input type="text" name="Smart Contract #"><br>
@@ -164,12 +165,6 @@
 		<script src="bundle.js" async defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="./temp_back.js"></script>
-		<script>
-			// function  bloomCheck(){
-			// 	$("#bloomid").attr("src","./images/bloomID.png"); //jquery call
-			// }
-
-		</script>
 
 	</body>
 </html>
