--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -76,7 +76,7 @@
 						</div>
 						<ul class="text-grey lg:text-grey-dark list-reset leading-loose mt-2" id="sidenav-categories">
 							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Investor</li>
-							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4"><a href="startup_proposal.html">Proposal<a/></li>
+							<li class="hover:text-indigo-dark hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4">Proposal</li>
 							<li class="text-indigo-lighter lg:text-indigo-darker font-medium flex justify-between items-center hover:cursor-pointer transition-normal ml-1 border-l border-grey-dark pl-4 mobile-home-trigger">
 								<span>Your Company</span>
 								<span class="bg-indigo-dark text-white text-xs rounded-full px-2 leading-normal">7</span>
@@ -333,20 +333,15 @@
 					</div>
 				</div>
 				<div class="mt-6">
-					<p class="text-grey-dark mt-1 text-sm">Currently Reading</p>
+					<a class="text-grey-dark mt-1 text-sm">Submit Proposal</a>
 					<div class="flex items-start mt-2">
-						<img src="./images/read-04.jpg" alt="read" class="w-1/6 lg:w-1/5 max-w-tiny shadow-md block transition-normal hover:brighter">
-						<div class="ml-3">
-							<p class="mt-1 leading-normal">Popular Lies* About Graphic Design</p>
-							<p class="text-indigo text-sm mt-1">15/250 pages</p>
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="hidden p-4" id="popup">
 			<h3 class="font-medium">Loan Proposal</h3>
-			<p class="text-sm mt-2 mb-3">Start Proposal with investor</p>
+			<a href="investor_proposal.html"class="text-sm mt-2 mb-3">Start Proposal with investor</a>
 			<div class="relative">
 				<select class="block appearance-none w-full text-sm bg-white border border-grey-light hover:border-grey pl-3 py-1 pr-8 rounded shadow leading-normal focus:outline-none focus:shadow-outline" id="tippy-select">
 					<option>Details</option>
