updated contracts and backend

--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -85,7 +85,7 @@
 					</li>
 					<li class="ml-2 mb-4 flex">
 						<img src="./images/wishlist-default.svg" alt="wishlist-icon" class="w-4 h-4 mr-2">
-						<div class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Settings</div>
+						<a href="update.html"class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Settings</a>
 					</li>
 					<li class="ml-2 mb-4 flex lg:hidden">
 						<img src="./images/profile-default.svg" alt="profile-icon" class="w-4 h-4 mr-2">
