--- a/frontend/main/settings.html
+++ b/frontend/main/settings.html
@@ -125,34 +125,30 @@
 				<!-- Picks -->
 				<div class="hidden flex-wrap order-2 pt-0 md:pt-6 md:pb-8 js-tab-pane" id="section-picks">
 					<div class="flex justify-start items-center p-5 px-6 w-full sm:w-1/2" style="background-color:#FBC164;">
-						<img src="./images/pick-1.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
 							<p class="font-medium">User Details</p>
-							<p class="mt-3 text-sm">Current Users: 80 , Avg Users per week:30</p>
+							<p class="mt-3 text-sm">Current Users: 80 , <br> Avg Users per week:30</p>
 							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Upload new contracts</button>
 						</div>
 					</div>
 					<div class="flex justify-start items-center p-5 px-6  w-full sm:w-1/2" style="background-color:#F1CECD;">
-						<img src="./images/pick-2.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
 							<p class="font-medium">CAPs table/Tax Documents</p>
-							<p class="mt-3 text-sm">Total YTD Transaction: 40k, Revenue past 30 days : 10k </p>
+							<p class="mt-3 text-sm">Total YTD Transaction: 40k, <br> Revenue past 30 days : 10k </p>
 							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Upload your tax forms</button>
 						</div>
 					</div>
 					<div class="flex justify-start items-center p-5 px-6  w-full sm:w-1/2" style="background-color:#ECE7E9;">
-						<img src="./images/pick-3.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
 							<p class="font-medium">Security of Contracts/Smart Contract auditing</p>
-							<p class="mt-3 text-sm">3 urgent, 2 minor fixed left</p>
+							<p class="mt-3 text-sm">3 urgent, <br> 2 minor fixed left</p>
 							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">Quantstamp Report</button>
 						</div>
 					</div>
 					<div class="flex justify-start items-center p-5 px-6  w-full sm:w-1/2" style="background-color:#D0E3E8;">
-						<img src="./images/pick-4.jpg" alt="pick" class="shadow-md w-1/3">
 						<div class="ml-4 mt-1 w-2/3">
 							<p class="font-medium">Smart Contract Transactions</p>
-							<p class="mt-3 text-sm">Current Transaction :490, avg Transaction per week:200, growth: 39%</p>
+							<p class="mt-3 text-sm">Current Transaction :490 <br> avg Transaction:200 <br> growth: 39%</p>
 							<button class="shadow-md mt-3 bg-grey-lightest hover:bg-white text-indigo-darker text-xs py-2 px-4 rounded-full transition-normal hover:shadow hover:translate-y-1 active:translate-y-1 focus:outline-none">upload new eth address</button>
 						</div>
 					</div>
