--- a/frontend/main/investor_proposal.html
+++ b/frontend/main/investor_proposal.html
@@ -106,7 +106,7 @@
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<img src="./images/armada.png">
 					</div>
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<h2>Contract Details</h2>
 						<form>
 						  Smart Contract #: <br>
@@ -117,7 +117,7 @@
 						  <input type="text" name="Revenue" value ="10000">
 						</form>
 					</div>
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<h2>Company Details</h2>
 						<ul>
 							<li>Modular Global Supply Chain Platform
@@ -132,7 +132,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<h2>Investment Details</h2>
 
 						<ul>
@@ -144,7 +144,7 @@
 							</li>
 
 						</ul>
-						<a href = "index.html">Accept</a>
+						<a href = "index2.html">Accept</a>
 						<br>
 						<a href="investor.html">Decline</a>
 					</div>
