--- a/frontend/main/settings.html
+++ b/frontend/main/settings.html
@@ -178,7 +178,7 @@
 					</div>
 				</div>
 				<div class="my-4 border-t pt-4">
-					<h3 class="text-indigo-dark font-normal">Your company score is <strong>640</strong> in 2018</h3>
+					<h3 class="text-indigo-dark font-normal">Your cNote score is <strong>640</strong> in 2018</h3>
 					<div class="flex flex-wrap -ml-2 justify-start items-center">
 						<img src="./images/armada.png" alt="read" class="shadow-md block m-2 transition-normal hover:brighter">
 					</div>
@@ -208,22 +208,6 @@
 		<script src="bundle.js" async defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="./temp_back.js"></script>
-		<script>
-			window.addEventListener('load', function() {
-
-			  // Check if Web3 has been injected by the browser:
-			  if (typeof web3 !== 'undefined') {
-			    // You have a web3 browser! Continue below!
-			    alert("Web3 Injected");
-			    startApp(web3);
-			  } else {
-			     // Warn the user that they need to get a web3 browser
-			     // Or install MetaMask, maybe with a nice graphic.
-			     alert("no metamask installed");
-			  }
-
-			})
-		</script>
 
 	</body>
 </html>
