--- a/frontend/main/startup_proposal.html
+++ b/frontend/main/startup_proposal.html
@@ -11,7 +11,11 @@
 		<title>cNote</title>
 		<link rel="stylesheet" href="output.css">
 		<link rel="stylesheet" href="node_modules/tippy.js/dist/themes/light.css">
+		<link rel="stylesheet" type="text/css" href="./vicons-font.css" />
+		<link rel="stylesheet" type="text/css" href="./buttons.css" />
 	</head>
+
+
 	<body class="bg-grey-lighter font-sans antialiased">
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -116,7 +120,7 @@
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<img src="./images/armada.png">
 					</div>
-					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-grey shadow-md md:shadow-none">
+					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<h2>Investment Milestones</h2>
 						<form>
 						  Smart Contract #: <br>
@@ -126,7 +130,10 @@
 						  Revenue: <br>
 						  <input type="text" name="Revenue">
 						</form>
-					<a href="investor.html">Confirm Proposal</a>
+<!-- 					<a href="investor.html">Confirm Proposal</a>
+ -->					<button><a class="button button--nanuk button--border-thin button--round-s" href="investor.html">
+						<span>C</span><span>o</span><span>n</span><span>f</span><span>i</span><span>i</span><span>r</span><span>m</span></a>
+					</button>
 					</div>
 
 				</div>
@@ -165,6 +172,9 @@
 		<script src="bundle.js" async defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="./temp_back.js"></script>
+		<script src='js/anime.min.js'></script>
+	    <script src='js/particles.js'></script>
+	    <script src='js/demo.js'></script>
 
 	</body>
 </html>
