--- a/frontend/main/index2.html
+++ b/frontend/main/index2.html
@@ -85,7 +85,7 @@
 					</li>
 					<li class="ml-2 mb-4 flex">
 						<img src="./images/wishlist-default.svg" alt="wishlist-icon" class="w-4 h-4 mr-2">
-						<a href="update.html"class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Settings</a>
+						<a href="settings.html"class="hover:cursor-pointer text-white lg:text-indigo-darkest no-underline font-medium mobile-home-trigger">Settings</a>
 					</li>
 					<li class="ml-2 mb-4 flex lg:hidden">
 						<img src="./images/profile-default.svg" alt="profile-icon" class="w-4 h-4 mr-2">
@@ -106,7 +106,7 @@
 				<!-- Desktop Stats -->
 				<div class="hidden px-6 md:px-0 mt-4 md:flex flex-wrap order-1 md:-order-1 md:shadow-md js-tab-pane" id="section-stats">
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
-						<img src="./images/bloomID2.png" id = "bloomid" alt="">
+						<img src="./images/bloomID.png" id = "bloomid" alt="">
 					</div>
 					<div class="w-full md:w-1/2 p-4 md:pt-12 md:pl-1 mt-4 md:mt-0 lg:pt-12 lg:pl-8 rounded md:rounded-r-none bg-white shadow-md md:shadow-none">
 						<button onclick="bloomCheck()"> <img src="./images/kycbutt.png" alt=""></button>
@@ -119,7 +119,6 @@
 					<div>
 						<div class="inline-block md:hidden no-underline border-indigo pb-2 px-2 text-sm mr-2 text-indigo-darkest hover:cursor-pointer js-tab relative" data-tab="section-stats">Stats</div>
 						<div class="no-underline inline-block border-indigo pb-2 px-2 text-sm mr-2 text-indigo-darkest hover:cursor-pointer js-tab active relative" data-tab="section-library">Investors <span class="text-indigo text-xs">(7)</span></div>
-
 					</div>
 				</div>
 				<!-- Library -->
