y'all a barebecue chicken

--- a/frontend/main/investor_proposal.html
+++ b/frontend/main/investor_proposal.html
@@ -11,6 +11,8 @@
 		<title>cNote</title>
 		<link rel="stylesheet" href="output.css">
 		<link rel="stylesheet" href="node_modules/tippy.js/dist/themes/light.css">
+		<link rel="stylesheet" type="text/css" href="./vicons-font.css" />
+		<link rel="stylesheet" type="text/css" href="./buttons.css" />
 	</head>
 	<body class="bg-grey-lighter font-sans antialiased">
 		<!--[if lt IE 7]>
@@ -144,10 +146,16 @@
 							</li>
 
 						</ul>
-						<a href = "index2.html">Accept</a>
+<!-- 						<a href = "index2.html">Accept</a>
+ -->					<button><a class="button button--nanuk button--border-thin button--round-s" href="index2.html">
+						<span>A</span><span>c</span><span>c</span><span>e</span><span>p</span><span>t</span></a>
+						</button>
 						<br>
-						<a href="investor.html">Decline</a>
-					</div>
+						<button><a class="button button--nanuk button--border-thin button--round-s" href="investor.html">
+						<span>D</span><span>e</span><span>c</span><span>l</span><span>i</span><span>n</span><span>e</span></a>
+						</button>
+<!-- 						<a href="investor.html">Decline</a>
+ -->					</div>
 
 				</div>
 			</div>
